switched to virtual thread executor service (#21)